// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepList renders correctly  1`] = `
<DocumentFragment>
  .cache-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.cache-ubtlu3-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.cache-rkqn04-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #464959;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="cache-1abqgir-Steps ewuati22"
  >
    <li
      class="cache-ubtlu3-Step ewuati21"
    >
      <div
        class="cache-rkqn04-StyledContainer e11loam60"
      >
        1
      </div>
      <div
        class="cache-66nq81-StyledDiv ewuati20"
      >
        Item 1
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with bulletIcon & sentiment 1`] = `
<DocumentFragment>
  .cache-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.cache-ubtlu3-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.cache-mpefw8-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #22674e;
  background: #cbf3e4;
  border: 1px solid #cbf3e4;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-14kwy0i-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.cache-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="cache-1abqgir-Steps ewuati22"
  >
    <li
      class="cache-ubtlu3-Step ewuati21"
    >
      <div
        class="cache-mpefw8-StyledContainer e11loam60"
      >
        <svg
          class="cache-14kwy0i-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15H13V17H11V15ZM11 7H13V13H11V7ZM12 2C6.47 2 2 6.5 2 12C2 14.6522 3.05357 17.1957 4.92893 19.0711C5.85752 19.9997 6.95991 20.7362 8.17317 21.2388C9.38642 21.7413 10.6868 22 12 22C14.6522 22 17.1957 20.9464 19.0711 19.0711C20.9464 17.1957 22 14.6522 22 12C22 10.6868 21.7413 9.38642 21.2388 8.17317C20.7362 6.95991 19.9997 5.85752 19.0711 4.92893C18.1425 4.00035 17.0401 3.26375 15.8268 2.7612C14.6136 2.25866 13.3132 2 12 2ZM12 20C9.87827 20 7.84344 19.1571 6.34315 17.6569C4.84285 16.1566 4 14.1217 4 12C4 9.87827 4.84285 7.84344 6.34315 6.34315C7.84344 4.84285 9.87827 4 12 4C14.1217 4 16.1566 4.84285 17.6569 6.34315C19.1571 7.84344 20 9.87827 20 12C20 14.1217 19.1571 16.1566 17.6569 17.6569C16.1566 19.1571 14.1217 20 12 20Z"
          />
        </svg>
      </div>
      <div
        class="cache-66nq81-StyledDiv ewuati20"
      >
        Item 1
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with bulletIcon 1`] = `
<DocumentFragment>
  .cache-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.cache-ubtlu3-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.cache-rkqn04-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #464959;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-14kwy0i-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.cache-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="cache-1abqgir-Steps ewuati22"
  >
    <li
      class="cache-ubtlu3-Step ewuati21"
    >
      <div
        class="cache-rkqn04-StyledContainer e11loam60"
      >
        <svg
          class="cache-14kwy0i-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15H13V17H11V15ZM11 7H13V13H11V7ZM12 2C6.47 2 2 6.5 2 12C2 14.6522 3.05357 17.1957 4.92893 19.0711C5.85752 19.9997 6.95991 20.7362 8.17317 21.2388C9.38642 21.7413 10.6868 22 12 22C14.6522 22 17.1957 20.9464 19.0711 19.0711C20.9464 17.1957 22 14.6522 22 12C22 10.6868 21.7413 9.38642 21.2388 8.17317C20.7362 6.95991 19.9997 5.85752 19.0711 4.92893C18.1425 4.00035 17.0401 3.26375 15.8268 2.7612C14.6136 2.25866 13.3132 2 12 2ZM12 20C9.87827 20 7.84344 19.1571 6.34315 17.6569C4.84285 16.1566 4 14.1217 4 12C4 9.87827 4.84285 7.84344 6.34315 6.34315C7.84344 4.84285 9.87827 4 12 4C14.1217 4 16.1566 4.84285 17.6569 6.34315C19.1571 7.84344 20 9.87827 20 12C20 14.1217 19.1571 16.1566 17.6569 17.6569C16.1566 19.1571 14.1217 20 12 20Z"
          />
        </svg>
      </div>
      <div
        class="cache-66nq81-StyledDiv ewuati20"
      >
        Item 1
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with disabled state & bullet icon 1`] = `
<DocumentFragment>
  .cache-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.cache-g6qori-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #b5b7bd;
}

.cache-n9cu12-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #6d717c;
  background: #e9eaeb;
  border: none;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-14kwy0i-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.cache-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="cache-1abqgir-Steps ewuati22"
  >
    <li
      class="cache-g6qori-Step ewuati21"
    >
      <div
        class="cache-n9cu12-StyledContainer e11loam60"
      >
        <svg
          class="cache-14kwy0i-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-66nq81-StyledDiv ewuati20"
      >
        <div>
          Item 1 with disabled state
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with disabled state 1`] = `
<DocumentFragment>
  .cache-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.cache-g6qori-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #b5b7bd;
}

.cache-n9cu12-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #6d717c;
  background: #e9eaeb;
  border: none;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.cache-66nq81-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<ul
    class="cache-1abqgir-Steps ewuati22"
  >
    <li
      class="cache-g6qori-Step ewuati21"
    >
      <div
        class="cache-n9cu12-StyledContainer e11loam60"
      >
        1
      </div>
      <div
        class="cache-66nq81-StyledDiv ewuati20"
      >
        <div>
          Item 1 with disabled state
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StepList renders correctly with small size 1`] = `
<DocumentFragment>
  .cache-1abqgir-Steps {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 24px;
  font-size: 16px;
}

.cache-ubtlu3-Step {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.cache-oqxd-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #464959;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 24px;
  height: 24px;
  font-size: 14px;
}

.cache-1jkk4vs-StyledDiv {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 24px;
  font-size: 16px;
}

<ul
    class="cache-1abqgir-Steps ewuati22"
  >
    <li
      class="cache-ubtlu3-Step ewuati21"
    >
      <div
        class="cache-oqxd-StyledContainer e11loam60"
      >
        1
      </div>
      <div
        class="cache-1jkk4vs-StyledDiv ewuati20"
      >
        Item 1 small
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
